# fastapi_study_02

./: .gitignore  README.md
FastAPI_study_proj_03/: README.md  pyproject.toml
fastapi03/: README.md  pyproject.toml
fastapi03/app62/: main.py  models.py
fastapi03/app63/: custom_exceptions.py  database.py  main.py  messages.pot  models.py  users_db.json
fastapi03/app63/locales/en/LC_MESSAGES/: messages.mo  messages.po
fastapi03/app63/locales/ru/LC_MESSAGES/: messages.mo  messages.po
fastapi04/: .test.env  README.md  messages_reserve.po  pyproject.toml  pytest.ini
fastapi04/src/app/: __init__.py  config.py  custom_exceptions.py  database.py  main.py  messages.pot  models.py  users_db.json
fastapi04/src/app/locales/en/LC_MESSAGES/: messages.mo  messages.po
fastapi04/src/app/locales/ru/LC_MESSAGES/: messages.mo  messages.po
fastapi04/tests/: test_main.py  users_db.json
