[project]
name = "fastapi04"
version = "0.1.0"
description = ""
authors = [
    {name = "FuntikPiggy",email = "gurin.valerii@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "fastapi-babel (>=1.0.0,<2.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.9.0,<3.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
